<resources>
    <string name="app_name">纯净日报</string>
    <string name="no_news">没有内容，请重试</string>
    <string name="load_fail">加载失败，请重试</string>
    <string name="load_more_fail">加载更多失败，请重试</string>
    <string name="refresh">刷新</string>
    <string name="change_daynight">切换主题</string>
    <string name="main_menu_changetheme_day">夜间模式</string>
    <string name="main_menu_changetheme_night">日间模式</string>

    <string name="date_today">今日热闻</string>
    <string name="test_list_date">3月20日 星期一</string>
    <string name="test_title">新闻标题新闻标题新闻标题新闻标题新闻标题新闻标题，不忘初心，方得始终</string>
    <string name="test_source">图片来源</string>
    <string name="share">分享</string>
    <string name="share_from">来自「纯净日报」的分享：</string>

    <string name="about_introduce">「纯净日报」- 给您最纯粹的阅读体验。\n\n开源是必须的，软件采用RxJava + Retrofit + OkHttp框架实现，喜欢的朋友请Star，欢迎一起学习讨论。\n\n你的支持将是我最大的动力与褒奖！</string>
    <string name="about_menu_action_share">分享</string>
    <string name="about_app_name_with_introduce">纯净日报 - 享受阅读的乐趣</string>
    <string name="about_developers">关于我</string>
    <string name="about_open_source_lis">感谢开源</string>
    <string name="about_introduce_and_help">介绍与帮助</string>
    <string name="about_open_source_libraries_list">com.squareup.retrofit2:retrofit:2.0.0-beta4\ncom.squareup.okhttp3:okhttp:3.2.0\nio.reactivex:rxandroid:1.1.0\nio.reactivex:rxjava:1.1.0\ncom.facebook.stetho:stetho:1.3.1\ncom.jakewharton:butterknife:7.0.1\ncom.github.bumptech.glide:glide:3.7.0\ncom.yalantis:phoenix:1.2.3\norg.jsoup:jsoup:1.8.3</string>
    <string name="about_function">实现的功能</string>
    <string name="about_function_list">* 日报列表显示\n* 日报详情显示\n* 错误界面处理\n* 上拉加载更多\n* 已读内容标记\n* 已读内容缓存\n* 离线下载\n* 滑动返回\n* 分享功能\n* 夜间模式</string>
    <string name="about">关于</string>
    <string name="about_version">1.0</string>

</resources>
